# maru

./: Cargo.toml  README.md  hello.json  hello.toml  hello.yaml
.github/workflows/: release.yml
clap_serde/src/: lib.rs
clap_serde2/: Cargo.toml
src/: main.rs
