[package]
name = "maru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4.3.2"
clap_serde = { path = "clap_serde" }
serde_json = "1.0.104"
serde_yaml = "0.9.25"
toml = "0.5.8"
